[gd_scene load_steps=4 format=3 uid="uid://bujrsnpilm30j"]

[ext_resource type="Script" uid="uid://2bv5k86qylrq" path="res://UI/start_menu.gd" id="1_23wg6"]
[ext_resource type="PackedScene" uid="uid://bomtem6soaxyd" path="res://Game/level.tscn" id="2_q5qyg"]
[ext_resource type="FontFile" uid="uid://bgc4yxm8ffbpw" path="res://Game/Daydream.ttf" id="3_f14c5"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 320.0
offset_top = 64.0
offset_right = 360.0
offset_bottom = 104.0

[node name="StartMenu" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = 128.0
offset_right = 30.0
offset_bottom = 180.0
grow_horizontal = 2
script = ExtResource("1_23wg6")
next_scene = ExtResource("2_q5qyg")

[node name="VBoxContainer" type="VBoxContainer" parent="StartMenu"]
layout_mode = 2

[node name="StartGameButton" type="Button" parent="StartMenu/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 24)
layout_mode = 2
text = "Start Game"

[node name="QuitGameButton" type="Button" parent="StartMenu/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 24)
layout_mode = 2
text = "Quit"

[node name="Label" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -284.0
offset_top = 28.0
offset_right = 242.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_f14c5")
theme_override_font_sizes/font_size = 40
text = "Legend of DINK!"

[connection signal="pressed" from="StartMenu/VBoxContainer/StartGameButton" to="StartMenu" method="_on_start_game_button_pressed"]
[connection signal="pressed" from="StartMenu/VBoxContainer/QuitGameButton" to="StartMenu" method="_on_quit_game_button_pressed"]
